# Pulsar

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  app.py  launcher.py  main.cpp  main.py  package.json  resources.qrc  resources.rc
.github/workflows/: build.yml  c-cpp.yml
App/: config_manager.cpp  config_manager.h  console_page.cpp  console_page.h  dependency_manager.cpp  dependency_manager.h  downloader.cpp  downloader.h  main_page.cpp  main_page.h  popup.cpp  popup.h  settings_page.cpp  settings_page.h
App/Core/: app_updater.cpp  app_updater.h  config_manager.cpp  config_manager.h  downloader.cpp  downloader.h  installer_window.cpp  installer_window.h  popup.cpp  popup.h  queue_manager.cpp  queue_manager.h  splash_screen.cpp  splash_screen.h
App/Gui/: components.cpp  components.h  console_page.cpp  console_page.h  container.cpp  container.h  downloader_page.cpp  downloader_page.h  queue_panel.cpp  queue_panel.h  settings_page.cpp  settings_page.h
App/System/: config_manager.cpp  config_manager.h  queue_manager.h
Installer/: app_updater.cpp  app_updater.h  installer_window.cpp  installer_window.h
Resources/: popup.cpp  popup.h  style.qss
Resources/Icons/: icon.icns
resources/: downloader.py
scripts/: update-version.js
src/: index.html  splash_screen.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs  splash.rs
src-tauri/src/system/: config.rs  mod.rs
src/app/: console.html  downloader.html  settings.html
src/assets/icons/: icon.icns
src/assets/scripts/: downloader.js  main.js  settings.js
src/assets/stylesheets/: global.css  pages.css  splash.css
